Fixed numbers being too big

--- a/GradeTriangulationWebApp/src/main/webapp/styles/generic.css
+++ b/GradeTriangulationWebApp/src/main/webapp/styles/generic.css
@@ -70,6 +70,10 @@ input[type="number"] {
     margin: 5px;
 }
 
+input[type="number"] {
+    width: 50px;
+}
+
 input[type="text"]:hover, 
 input[type="password"]:hover, 
 input[type="number"]:hover {
